package com.cesar.school.core.projectmanagement.strategy;

public interface TaskScoreStrategy {
    int calculatePoints(int basePoints);
}
